--- a/index.html
+++ b/index.html
@@ -1,1 +1,143 @@
-
+<!DOCTYPE html><html lang="fa">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>آموزش جامع ریاضی نهم</title>
+  <style>
+    body {
+      font-family: tahoma, sans-serif;
+      background-color: #fefaf4; /* کرمی */
+      color: #222;
+      margin: 0;
+      padding: 0;
+      direction: rtl;
+    }
+    header {
+      background-color: #002147; /* سرمه‌ای */
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    nav {
+      background-color: #f4d4b2; /* نخودی */
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #002147;
+      font-weight: bold;
+    }
+    section {
+      padding: 20px;
+    }
+    .chapter {
+      background-color: #e6f0ff; /* آبی روشن */
+      border: 2px solid #ffd1b3; /* گل‌بهی */
+      margin: 15px 0;
+      border-radius: 10px;
+      padding: 15px;
+    }
+    .lesson {
+      margin: 10px 0;
+      padding: 10px;
+      background: #fff;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+    .locked {
+      opacity: 0.6;
+      pointer-events: none;
+    }
+    footer {
+      background-color: #002147;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      margin-top: 20px;
+    }
+    button {
+      background-color: #ffd1b3; /* گل‌بهی */
+      border: none;
+      padding: 8px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>  <header>
+    <h1>آموزش جامع ریاضی نهم</h1>
+    <p>پایه متوسطه اول</p>
+  </header>  <nav>
+    <a href="#chap1">فصل اول</a>
+    <a href="#chap2">فصل دوم</a>
+    <a href="#chap3">فصل سوم</a>
+    <a href="#chap4">فصل چهارم</a>
+    <a href="#chap5">فصل پنجم</a>
+    <a href="#chap6">فصل ششم</a>
+    <a href="#chap7">فصل هفتم</a>
+    <a href="#chap8">فصل هشتم</a>
+  </nav>  <section id="chap1" class="chapter">
+    <h2>فصل اول: مجموعه ها</h2>
+    <p><strong>درسنامه:</strong> آشنایی با مفهوم مجموعه، نمادها و کاربردهای آن در ریاضی.</p>
+    <div class="lesson"><b>درس اول:</b> معرفی مجموعه <br> 🎥 <a href="#">ویدیو</a> | 📄 <a href="#">نمونه سوال</a></div>
+    <div class="lesson"><b>درس دوم:</b> مجموعه های برابر و نمایش مجموعه ها <br> 🎥 <a href="#">ویدیو</a> | 📄 <a href="#">نمونه سوال</a></div>
+    <div class="lesson"><b>درس سوم:</b> اجتماع، اشتراک و تفاضل مجموعه ها <br> 🎥 <a href="#">ویدیو</a> | 📄 <a href="#">نمونه سوال</a></div>
+    <div class="lesson"><b>درس چهارم:</b> مجموعه ها و احتمال <br> 🎥 <a href="#">ویدیو</a> | 📄 <a href="#">نمونه سوال</a></div>
+  </section>  <section id="chap2" class="chapter locked">
+    <h2>فصل دوم: اعداد حقیقی 🔒</h2>
+    <p><strong>درسنامه:</strong> معرفی اعداد گویا، حقیقی و مفهوم قدر مطلق.</p>
+    <div class="lesson">درس اول: عددهای گویا</div>
+    <div class="lesson">درس دوم: عددهای حقیقی</div>
+    <div class="lesson">درس سوم: قدر مطلق و محاسبه تقریبی</div>
+    <button>خرید این فصل</button>
+  </section>  <section id="chap3" class="chapter locked">
+    <h2>فصل سوم: استدلال و اثبات در هندسه 🔒</h2>
+    <p><strong>درسنامه:</strong> آشنایی با استدلال، اثبات و هم‌نهشتی.</p>
+    <div class="lesson">درس اول: استدلال</div>
+    <div class="lesson">درس دوم: آشنایی با اثبات در هندسه</div>
+    <div class="lesson">درس سوم: هم‌نهشتی مثلث ها</div>
+    <div class="lesson">درس چهارم: حل مسئله در هندسه</div>
+    <div class="lesson">درس پنجم: شکل های متشابه</div>
+    <button>خرید این فصل</button>
+  </section>  <section id="chap4" class="chapter locked">
+    <h2>فصل چهارم: توان و ریشه 🔒</h2>
+    <p><strong>درسنامه:</strong> آشنایی با توان صحیح، نماد علمی و ریشه‌گیری.</p>
+    <div class="lesson">درس اول: توان صحيح</div>
+    <div class="lesson">درس دوم: نماد علمی</div>
+    <div class="lesson">درس سوم: ریشه گیری</div>
+    <div class="lesson">درس چهارم: جمع و تفریق رادیکال ها</div>
+    <button>خرید این فصل</button>
+  </section>  <section id="chap5" class="chapter locked">
+    <h2>فصل پنجم: عبارت های جبری 🔒</h2>
+    <p><strong>درسنامه:</strong> معرفی عبارت های جبری، اتحادها و کاربردها.</p>
+    <div class="lesson">درس اول: عبارت های جبری و مفهوم اتحاد</div>
+    <div class="lesson">درس دوم: چند اتحاد دیگر، تجزیه و کاربردها</div>
+    <div class="lesson">درس سوم: نابرابری و نامعادله ها</div>
+    <button>خرید این فصل</button>
+  </section>  <section id="chap6" class="chapter locked">
+    <h2>فصل ششم: خط و معادلات خطی 🔒</h2>
+    <p><strong>درسنامه:</strong> مفهوم معادله خط و دستگاه معادلات.</p>
+    <div class="lesson">درس اول: معادله ی خط</div>
+    <div class="lesson">درس دوم: شیب خط و عرض از مبدأ</div>
+    <div class="lesson">درس سوم: دستگاه معادله های خطی</div>
+    <button>خرید این فصل</button>
+  </section>  <section id="chap7" class="chapter locked">
+    <h2>فصل هفتم: عبارت های گویا 🔒</h2>
+    <p><strong>درسنامه:</strong> ساده‌سازی و محاسبات عبارت های گویا.</p>
+    <div class="lesson">درس اول: معرفی و ساده کردن عبارت های گویا</div>
+    <div class="lesson">درس دوم: محاسبات عبارت های گویا</div>
+    <div class="lesson">درس سوم: تقسیم چند جمله ای ها</div>
+    <button>خرید این فصل</button>
+  </section>  <section id="chap8" class="chapter locked">
+    <h2>فصل هشتم: حجم و مساحت 🔒</h2>
+    <p><strong>درسنامه:</strong> محاسبه حجم و مساحت کره، مخروط، هرم و غیره.</p>
+    <div class="lesson">درس اول: حجم و مساحت کره</div>
+    <div class="lesson">درس دوم: حجم هرم و مخروط</div>
+    <div class="lesson">درس سوم: سطح و حجم</div>
+    <button>خرید این فصل</button>
+  </section>  <footer>
+    <p>© 2025 آموزش جامع ریاضی نهم | طراحی شده برای یادگیری آسان</p>
+  </footer></body>
+</html>
